<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/addDate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="40dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/information"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:text="@string/informationen"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/name_training"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="5dp"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/training"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="3dp"
                android:background="#808080" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="25dp"
                android:text="@string/day"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_weekday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/day"
                android:textColor="#000000"
                android:textSize="16dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="3dp"
                android:background="#808080" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="25dp"
                android:text="@string/information"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_information"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/information"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="4dp"
                android:text="@string/timeframe"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="4dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="4dp"
                android:text="@string/from"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/begin_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="4dp"
                android:clickable="true"
                android:onClick="clickOnTimeFrameFrom"
                android:text="@string/from"
                android:textColor="#000000"
                android:textSize="16dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="4dp"
                android:background="#9fA2B2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="4dp"
                android:text="@string/to"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="4dp"
                android:text="@string/to"
                android:textColor="#000000"
                android:textSize="16dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="4dp"
                android:background="#9fA2B2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="4dp"
                android:text="@string/time"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="4dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="4dp"
                android:text="@string/meeting"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_meeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/meeting"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="4dp"
                android:text="@string/begin"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/begin_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="4dp"
                android:text="@string/begin"
                android:textColor="#000000"
                android:textSize="16dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="4dp"
                android:background="#9fA2B2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="4dp"
                android:text="@string/end"
                android:textColor="@color/colorPrimary"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/end_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="4dp"
                android:text="@string/end"
                android:textColor="#000"
                android:textSize="16dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="4dp"
                android:background="#9fA2B2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="4dp"
                android:text="@string/address"
                android:textColor="@color/colorPrimary"
                android:textSize="25dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="4dp"
                android:background="@color/colorPrimary" />

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Adresse"
                android:textSize="16dp" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonConfirmDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:clickable="true"
        app:backgroundTint="@color/colorAccent"
        app:srcCompat="@drawable/ic_check_black_24dp" />
</RelativeLayout>