<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_vote"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="0dp"
            android:foreground="?selectableItemBackground"
            app:cardBackgroundColor="#FFB460"
            card_view:cardCornerRadius="0dp"
            card_view:contentPadding="4dp"
            android:clickable="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bgcardpink"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_vote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/vote"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/card_voteQuestionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_margin="10dp"
                    android:text="@string/vote_question"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <RadioButton
                    android:id="@+id/radioButton_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginRight="80dp"
                    android:text="@string/radiobutton_vote1"
                    android:textColor="@color/colorWhite" />

                <RadioButton
                    android:id="@+id/radioButton_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:layout_marginRight="70dp"
                    android:text="@string/radiobutton_vote2"
                    android:textColor="@color/colorWhite" />

                <RadioButton
                    android:id="@+id/radioButton_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:text="@string/radiobutton_vote3"
                    android:textColor="@color/colorWhite" />

            </RadioGroup>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>